examples/invalid/15_method_call_syntax.lane
// invalid : Lane2 v1 has field access plus call, but no method receiver lookup
module Examples.Invalid15

pub struct UserId {
  value : Int
}

pub fn bad(id : UserId) -> Int {
  id.value()
}
